*03/03/2015 _v1.170.0_

- Ajout d'un parametre pour faire de la purge d'historique si plus vieux de x jours/mois
- Ajout d'une fonction pause et recherche dans le log d'evenements

*01/03/2015 _v1.169.0_

- Ajout d'un log d'evenement (execution de commande, reception d'un evenement et lancement d'un scénario)
- Correction d'un bug d'encodage de la base sur certaine installation jeedom

*28/02/2015 _v1.168.0_

- Amélioration du systeme de changelog des plugins

*26/02/2015 _v1.167.0_

- Option sur la page Générale -> Affichage pour centrer verticalement ou non les commandes d'un équipement
- Correction d'un bug empechant la restauration d'un backup
- Correction de bug d'affichage sur le dashboard

*25/02/2015 _v1.167.0_

- Amélioration de la page de gestion du réseaux Jeedom

*19/02/2015* _v1.165.0_

- Suppression de toutes les restriction du aux licences

*15/02/2015* _v1.165.0_

- Bugfix
- Possibilité d'appliqué les parametres d'un équipement/widget en masse (page Générale -> Affichage puis "Appliquer à")
- Ajout champs de recherche pour choisir une icone

*09/02/2015* _v1.163.0_

- Bugfix

*08/02/2015* _v1.162.0_

- Support de la notion de plugin privé

*31/01/2015* _v1.161.0_

- Possibilité de mettre un code sur une commande de type action (à partir de la fenêtre de configuration avancée de l'action), uniquement sur les widget (pas de code demandé pour les scénarios)

*30/01/2015* _v1.161.0_

- Ajout action gotodesign dans les scénarios pour changer le design affiché sur tous les navigateurs qui affichent un design par le design demandé

*28/01/2015* _v1.161.0_

- Ajout d'un bouton pour regénérer toutes les interactions
- Ajout d'une option pour forcer le retour à la ligne avant/après un widget

*26/01/2015* _v1.161.0_

- Ajout fonction averageBetween, maxBetween et minBetween pour les scénarios

*25/01/2015* _v1.160.0_

- Ajout d'une fenêtre d'aide pour la mise en place de conditions dans les scénarios

*23/01/2015* _v1.160.0_
