@@ -17,179 +17,184 @@
  */
 
 if (php_sapi_name() != 'cli' || isset($_SERVER['REQUEST_METHOD']) || !isset($_SERVER['argc'])) {
-    header("Status: 404 Not Found");
-    header('HTTP/1.0 404 Not Found');
-    $_SERVER['REDIRECT_STATUS'] = 404;
-    echo "<h1>404 Not Found</h1>";
-    echo "The page that you have requested could not be found.";
-    exit();
+	header("Status: 404 Not Found");
+	header('HTTP/1.0 404 Not Found');
+	$_SERVER['REDIRECT_STATUS'] = 404;
+	echo "<h1>404 Not Found</h1>";
+	echo "The page that you have requested could not be found.";
+	exit();
+}
+
+if (isset($argv)) {
+	foreach ($argv as $arg) {
+		$argList = explode('=', $arg);
+		if (isset($argList[0]) && isset($argList[1])) {
+			$_GET[$argList[0]] = $argList[1];
+		}
+	}
+}
+
+if (date('i') % 5 == 0 && !isset($_GET['cron_id'])) {
+	shell_exec('/bin/bash ' . dirname(__FILE__) . '/../../script/check_mysql.sh >> ' . dirname(__FILE__) . '/../../log/watchdog 2>&1');
 }
 
 require_once dirname(__FILE__) . "/core.inc.php";
 
 $startTime = getmicrotime();
-if (isset($argv)) {
-    foreach ($argv as $arg) {
-        $argList = explode('=', $arg);
-        if (isset($argList[0]) && isset($argList[1])) {
-            $_GET[$argList[0]] = $argList[1];
-        }
-    }
-}
 
 if (init('cron_id') != '') {
-    $datetime = date('Y-m-d H:i:s');
-    $cron = cron::byId(init('cron_id'));
-    if (!is_object($cron)) {
-        echo 'Cron non trouvé';
-        die();
-    }
-    try {
-        $cron->setState('run');
-        $cron->setDuration('0s');
-        $cron->setPID(getmypid());
-        $cron->setLastRun($datetime);
-        $cron->save();
-        $option = $cron->getOption();
-        if ($cron->getClass() != '') {
-            $class = $cron->getClass();
-            $function = $cron->getFunction();
-            if (class_exists($class) && method_exists($class, $function)) {
-                if ($cron->getDeamon() == 0) {
-                    $class::$function($option);
-                } else {
-                    while (true) {
-                        $class::$function($option);
-                        sleep($cron->getDeamonSleepTime());
-                        if ((strtotime('now') - strtotime($datetime)) / 60 >= $cron->getTimeout()) {
-                            die();
-                        }
-                    }
-                }
-            } else {
-                $cron->setState('Not found');
-                $cron->setPID();
-                $cron->setServer('');
-                $cron->save();
-                log::add('cron', 'error', __('[Erreur] Classe ou fonction non trouvée ', __FILE__) . $cron->getName());
-                die();
-            }
-        } else {
-            $function = $cron->getFunction();
-            if (function_exists($function)) {
-                if ($cron->getDeamon() == 0) {
-                    $function($option);
-                } else {
-                    while (true) {
-                        $function($option);
-                        sleep($cron->getDeamonSleepTime());
-                        if ((strtotime('now') - strtotime($datetime)) / 60 >= $cron->getTimeout()) {
-                            die();
-                        }
-                    }
-                }
-            } else {
-                $cron->setState('Not found');
-                $cron->setPID();
-                $cron->setServer('');
-                $cron->save();
-                $cron->setEnable(0);
-                log::add('cron', 'error', __('[Erreur] Non trouvée ', __FILE__) . $cron->getName());
-                die();
-            }
-        }
-        if ($cron->getOnce() == 1) {
-            $cron->remove(false);
-        } else {
-            if (!$cron->refresh()) {
-                die();
-            }
-            $cron->setState('stop');
-            $cron->setPID();
-            $cron->setServer('');
-            $cron->setDuration(convertDuration(strtotime('now') - strtotime($datetime)));
-            $cron->save();
-        }
-        die();
-    } catch (Exception $e) {
-        $cron->setState('error');
-        $cron->setPID('');
-        $cron->setServer('');
-        $cron->setDuration(-1);
-        $cron->save();
-        $logicalId = config::genKey();
-        if ($e->getCode() != 0) {
-            $logicalId = $cron->getName() . '::' . $e->getCode();
-        }
-        echo '[Erreur] ' . $cron->getName() . ' : ' . print_r($e, true);
-        log::add('cron', 'error', __('Erreur sur ', __FILE__) . $cron->getName() . ' : ' . print_r($e, true), $logicalId);
-    }
+	$datetime = date('Y-m-d H:i:s');
+	$cron = cron::byId(init('cron_id'));
+	if (!is_object($cron)) {
+		echo 'Cron non trouvé';
+		die();
+	}
+	try {
+		$cron->setState('run');
+		$cron->setDuration('0s');
+		$cron->setPID(getmypid());
+		$cron->setLastRun($datetime);
+		$cron->save();
+		$option = $cron->getOption();
+		if ($cron->getClass() != '') {
+			$class = $cron->getClass();
+			$function = $cron->getFunction();
+			if (class_exists($class) && method_exists($class, $function)) {
+				if ($cron->getDeamon() == 0) {
+					$class::$function($option);
+				} else {
+					while (true) {
+						$class::$function($option);
+						sleep($cron->getDeamonSleepTime());
+						if ((strtotime('now') - strtotime($datetime)) / 60 >= $cron->getTimeout()) {
+							die();
+						}
+					}
+				}
+			} else {
+				$cron->setState('Not found');
+				$cron->setPID();
+				$cron->setServer('');
+				$cron->save();
+				log::add('cron', 'error', __('[Erreur] Classe ou fonction non trouvée ', __FILE__) . $cron->getName());
+				die();
+			}
+		} else {
+			$function = $cron->getFunction();
+			if (function_exists($function)) {
+				if ($cron->getDeamon() == 0) {
+					$function($option);
+				} else {
+					while (true) {
+						$function($option);
+						sleep($cron->getDeamonSleepTime());
+						if ((strtotime('now') - strtotime($datetime)) / 60 >= $cron->getTimeout()) {
+							die();
+						}
+					}
+				}
+			} else {
+				$cron->setState('Not found');
+				$cron->setPID();
+				$cron->setServer('');
+				$cron->save();
+				$cron->setEnable(0);
+				log::add('cron', 'error', __('[Erreur] Non trouvée ', __FILE__) . $cron->getName());
+				die();
+			}
+		}
+		if ($cron->getOnce() == 1) {
+			$cron->remove(false);
+		} else {
+			if (!$cron->refresh()) {
+				die();
+			}
+			$cron->setState('stop');
+			$cron->setPID();
+			$cron->setServer('');
+			$cron->setDuration(convertDuration(strtotime('now') - strtotime($datetime)));
+			$cron->save();
+		}
+		die();
+	} catch (Exception $e) {
+		$cron->setState('error');
+		$cron->setPID('');
+		$cron->setServer('');
+		$cron->setDuration(-1);
+		$cron->save();
+		$logicalId = config::genKey();
+		if ($e->getCode() != 0) {
+			$logicalId = $cron->getName() . '::' . $e->getCode();
+		}
+		echo '[Erreur] ' . $cron->getName() . ' : ' . print_r($e, true);
+		log::add('cron', 'error', __('Erreur sur ', __FILE__) . $cron->getName() . ' : ' . print_r($e, true), $logicalId);
+	}
 } else {
-    if (cron::jeeCronRun()) {
-        die();
-    }
-    $sleepTime = config::byKey('cronSleepTime');
-    $started = jeedom::isStarted();
+	if (cron::jeeCronRun()) {
+		die();
+	}
+	$sleepTime = config::byKey('cronSleepTime');
+	$started = jeedom::isStarted();
 
-    set_time_limit(59);
-    cron::setPidFile();
-    while (true) {
-        if (config::byKey('enableCron', 'core', 1, true) == 0) {
-            die(__('Tous les crons sont actuellement désactivés', __FILE__));
-        }
-        foreach (cron::all() as $cron) {
-            try {
-                if (!$started && $cron->getClass() != 'jeedom' && $cron->getFunction() != 'cron') {
-                    continue;
-                }
+	set_time_limit(59);
+	cron::setPidFile();
+	while (true) {
+		if (config::byKey('enableCron', 'core', 1, true) == 0) {
+			die(__('Tous les crons sont actuellement désactivés', __FILE__));
+		}
+		foreach (cron::all() as $cron) {
+			try {
+				if (!$started && $cron->getClass() != 'jeedom' && $cron->getFunction() != 'cron') {
+					continue;
+				}
 
-                if (!$cron->refresh()) {
-                    continue;
-                }
-                $duration = strtotime('now') - strtotime($cron->getLastRun());
-                if ($cron->getEnable() == 1 && $cron->getState() != 'run' && $cron->getState() != 'starting' && $cron->getState() != 'stoping') {
-                    if ($cron->getDeamon() == 0) {
-                        if ($cron->isDue()) {
-                            $cron->start();
-                        }
-                    } else {
-                        $cron->start();
-                    }
-                }
-                if ($cron->getState() == 'run' && ($duration / 60) >= $cron->getTimeout()) {
-                    $cron->stop(); 
-                }
+				if (!$cron->refresh()) {
+					continue;
+				}
+				$duration = strtotime('now') - strtotime($cron->getLastRun());
+				if ($cron->getEnable() == 1 && $cron->getState() != 'run' && $cron->getState() != 'starting' && $cron->getState() != 'stoping') {
+					if ($cron->getDeamon() == 0) {
+						if ($cron->isDue()) {
+							$cron->start();
+						}
+					} else {
+						$cron->start();
+					}
+				}
+				if ($cron->getState() == 'run' && ($duration / 60) >= $cron->getTimeout()) {
+					$cron->stop();
+				}
 
-                switch ($cron->getState()) {
-                    case 'starting':
-                    $cron->run();
-                    break;
-                    case 'stoping':
-                    $cron->halt();
-                    if($cron->getEnable() == 1 && $cron->getDeamon() == 1 && !$cron->running()){
-                        $cron->run();
-                    }
-                    break;
-                }
-            } catch (Exception $e) {
-                if ($cron->getOnce() != 1) {
-                    $cron->setState('error');
-                    $cron->setPID('');
-                    $cron->setServer('');
-                    $cron->setDuration(-1);
-                    $cron->save();
-                    echo __('[Erreur master] ', __FILE__) . $cron->getName() . ' : ' . print_r($e, true);
-                    log::add('cron', 'error', __('[Erreur master] ', __FILE__) . $cron->getName() . ' : ' . $e->getMessage());
-                }
-            }
-        }
-        if ($sleepTime > 59) {
-            die();
-        }
-        sleep($sleepTime);
-        if ((getmicrotime() - $startTime) > 59) {
-            die();
-        }
-    }
+				switch ($cron->getState()) {
+					case 'starting':
+						$cron->run();
+						break;
+					case 'stoping':
+						$cron->halt();
+						if ($cron->getEnable() == 1 && $cron->getDeamon() == 1 && !$cron->running()) {
+							$cron->run();
+						}
+						break;
+				}
+			} catch (Exception $e) {
+				if ($cron->getOnce() != 1) {
+					$cron->setState('error');
+					$cron->setPID('');
+					$cron->setServer('');
+					$cron->setDuration(-1);
+					$cron->save();
+					echo __('[Erreur master] ', __FILE__) . $cron->getName() . ' : ' . print_r($e, true);
+					log::add('cron', 'error', __('[Erreur master] ', __FILE__) . $cron->getName() . ' : ' . $e->getMessage());
+				}
+			}
+		}
+		if ($sleepTime > 59) {
+			die();
+		}
+		sleep($sleepTime);
+		if ((getmicrotime() - $startTime) > 59) {
+			die();
+		}
+	}
 }
 ?>
